# LineProphet-Machine-Learning-for-Spectral-Attributes

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt  setup.py
ModelSchema/NeuralNetWork/: model.py  train_and_test.py
NN_modeling/: modeling.ipynb  real_test_HCl.ipynb  spectral_lines_sampling.py
database/: envs_test.txt  envs_train.txt  envs_valid.txt  line_profiles.csv  lines_h35cl.csv  lines_h35cl_c1.csv  lines_h35cl_c3.csv
database/lines/: lines_prod.csv  lines_test.csv
database/selfbroadening/: lines_h35cl_c10.csv  lines_h35cl_c2.csv  lines_h35cl_c4,5.csv
hitran/: hitran.ipynb  spectral_lines_sampling.py
hitran_database/: hcl.header
linegenerator/: line_generator.py
main_codes/: NNconfig.yaml  data_spectra_generator.py  data_spectra_generator_with_features.py  download_spectra.py  train_autoencoder.py  train_conv.py  train_model.py
main_codes/hitran_database/: hcl.data  hcl.header
modeling/: hcl_test.ipynb  model.pkl  modelagem.ipynb
nbs/: ML_modeling.ipynb  for_images.ipynb  models_config.ipynb  models_val.ipynb  selfBroadeningHCl.ipynb  teste.ipynb  utils.py
nbs/hitran_database/: HCl.data  HCl.header
scr/: main.py
scr/linegenerator/: database_generator.py  line_generator.py  linefit.py
spectrograms/: main.py  main_train.py  teste.ipynb
spectrograms/hitran_database/: HCl.header
spectrograms/model_funcs/: dataset.py  model.py  train_and_test.py
spectrograms/models/: convolutionalnet.pth
src/: for_images.ipynb  main.py  selfBroadeningHCl.ipynb
src/BroadeningProcessing/: broadeningprocessing.py
(+249 files in other folders)
