[tool.poetry]
name = "voigt profile generator"
version = "0.1.0"
description = ""
authors = ["Alexandre Esposte <alexandreesposte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
